# cognee-mcp-v2

./: .env.example  .gitignore  CONFIGURATION_SUCCESS.md  README.md  WARP.md  all_tools_test_report_20250904_151658.json  deep_mcp_test.py  main.py  pyproject.toml  requirements.txt  test_all_tools.py  test_mcp.py  test_mcp_improved.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: settings.py
core/: api_client.py  auth.py  error_handler.py  mcp_server.py  tool_registry.py
schemas/: api_models.py  mcp_models.py
tools/: base_tools.py  dataset_tools.py  diagnostic_tools.py  graph_tools.py  memory_tools.py  ontology_tools.py  self_improving_tools.py  temporal_tools.py
